--- a/contact-tracing/src/app/register/register.component.html
+++ b/contact-tracing/src/app/register/register.component.html
@@ -1,12 +1,12 @@
-<form>
+<form [formGroup]="form" (submit)="submit()">
   <h1 class="h3 mb-3 fw-normal">Please register</h1>
 
   <div class="form-floating">
-    <input type="email" class="form-control" id="inputUsername" placeholder="Username" required autofocus>
+    <input formControlName="username" type="email" class="form-control" id="inputUsername" placeholder="Username" required autofocus>
     <label for="inputUsername">Username</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+    <input formControlName="password" type="password" class="form-control" id="inputPassword" placeholder="Password" required>
     <label for="inputPassword">Password</label>
   </div>
   <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
