--- a/contact-tracing/src/app/navigation/navigation.component.html
+++ b/contact-tracing/src/app/navigation/navigation.component.html
@@ -2,12 +2,18 @@
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">Contact Tracing</a>
     <div>
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="!authenticated">
         <li class="nav-item">
           <a class="nav-link active" routerLink="/login">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" routerLink="/register">Register</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="authenticated">
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/login" (click)="logout()">Logout</a>
         </li>
       </ul>
     </div>
