--- a/contact-tracing/src/app/add-entry/add-entry.component.html
+++ b/contact-tracing/src/app/add-entry/add-entry.component.html
@@ -1,1 +1,14 @@
-<p>add-entry works!</p>
+<form [formGroup]="form" (submit)="submit()">
+  <h1 class="h3 mb-3 fw-normal">Add an Entry</h1>
+
+  <div class="form-floating">
+    <input formControlName="name" type="name" class="form-control" id="inputName" placeholder="Name" required autofocus>
+    <label for="inputName">Name</label>
+  </div>
+  <div class="form-floating">
+    <input formControlName="address" type="name" class="form-control" id="inputAddress" placeholder="Address" required>
+    <label for="inputAddress">Address</label>
+  </div>
+  <button class="w-100 btn btn-lg btn-primary" type="submit">Add Entry</button>
+</form>
+
