--- a/contact-tracing/src/app/navigation/navigation.component.html
+++ b/contact-tracing/src/app/navigation/navigation.component.html
@@ -13,6 +13,9 @@
 
       <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="authenticated">
         <li class="nav-item">
+          <a class="nav-link active" routerLink="/entry/add">Add Entry</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" routerLink="/login" (click)="logout()">Logout</a>
         </li>
       </ul>
