--- a/contact-tracing/src/app/register/register.component.html
+++ b/contact-tracing/src/app/register/register.component.html
@@ -9,5 +9,5 @@
     <input formControlName="password" type="password" class="form-control" id="inputPassword" placeholder="Password" required>
     <label for="inputPassword">Password</label>
   </div>
-  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+  <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
 </form>
