--- a/contact-tracing/src/app/single-entry/single-entry.component.html
+++ b/contact-tracing/src/app/single-entry/single-entry.component.html
@@ -1,1 +1,7 @@
-<p>single-entry works!</p>
+<div class="px-4 py-5 my-5 text-center">
+  <qr-code [value]="qrInfo"  class="d-block mx-auto mb-4"></qr-code>
+  <h1 class="display-5 fw-bold">{{name}}</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4"><strong>Adress</strong>:{{address}}<br><strong>id</strong>:{{id}}</p>
+  </div>
+</div>
